# test_fastapi_logger

./: README.md  pyproject.toml
src/: main.py
src/logger/: async_handlers.py  settings.py
