[tool.poetry]
name = "test-fastapi-logger"
version = "0.1.0"
description = ""
authors = ["grm <golosov_SA@mail.ru>"]
readme = "README.md"
packages = [{include = "test_fastapi_logger"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
aioconsole = "^0.6.2"
orjson = "^3.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
